# OOD

./: CMakeLists.txt  Controller.cpp  Controller.hpp  DynamicLoader.cpp  DynamicLoader.h  FileIO.cpp  FileIO.h  FileIO.hpp  Functions.cpp  Functions.h  LICENSE  Map.cpp  Map.hpp  MapReduce_Phase1.cpp  MapReduce_Phase3.cpp  MapReduce_Phase4.cpp  Messages.hpp  NetworkConstants.hpp  OOD_Phase3.md  README.md  Reduce.cpp  Reduce.h  Reduce.hpp  Stub.cpp  Stub.hpp
output/: foo.bar  reducedPiece1.txt  reducedPiece2.txt  reducedPiece3.txt  reducedPiece4.txt  truth.txt
temp/: shakesTemp.txt  shakesTemp.txt1  shakesTemp.txt2  shakesTemp.txt3  shakesTemp.txt4  shakesTemp.txt5
